--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -45,6 +45,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BED_Parser.cs" />
+    <Compile Include="Di3.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
