a console application  is added for temporary use which illustrates how to use BPlusTree.

--- a/Di3/Di3Main/Di3BMain.csproj
+++ b/Di3/Di3Main/Di3BMain.csproj
@@ -67,6 +67,9 @@
     <SignManifests>true</SignManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CSharpTest.Net.Collections">
+      <HintPath>..\packages\CSharpTest.Net.Collections.14.906.1403.1082\lib\net40\CSharpTest.Net.Collections.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -86,6 +89,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="Di3BMain_TemporaryKey.pfx" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BEDParser\BEDParser.csproj">
