--- a/Di3/packages/repositories.config
+++ b/Di3/packages/repositories.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Di3\packages.config" />
+  <repository path="..\Di3Main\packages.config" />
   <repository path="..\Library\Di3\packages.config" />
+  <repository path="..\TestMain\packages.config" />
 </repositories>
