--- a/Di3/Di3Main/Di3BMain.csproj
+++ b/Di3/Di3Main/Di3BMain.csproj
@@ -70,6 +70,12 @@
     <Reference Include="CSharpTest.Net.Collections">
       <HintPath>..\packages\CSharpTest.Net.Collections.14.906.1403.1082\lib\net40\CSharpTest.Net.Collections.dll</HintPath>
     </Reference>
+    <Reference Include="Google.ProtocolBuffers">
+      <HintPath>..\..\..\..\..\..\VJGoogleDrive\01 - Di3\7 - Packages\protobuf\tools\Google.ProtocolBuffers.dll</HintPath>
+    </Reference>
+    <Reference Include="Google.ProtocolBuffers.Serialization">
+      <HintPath>..\..\..\..\..\..\VJGoogleDrive\01 - Di3\7 - Packages\protobuf\tools\Google.ProtocolBuffers.Serialization.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -83,8 +89,12 @@
     <Compile Include="DATA.cs" />
     <Compile Include="Peak.cs" />
     <Compile Include="PeakData.cs" />
+    <Compile Include="Serializers\CSerializer.cs" />
+    <Compile Include="Serializers\MSerializer.cs" />
+    <Compile Include="Serializers\PeakUmbrellaClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Serializers\Serializers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
