--- a/Di3/IConvertable/IParsable.csproj
+++ b/Di3/IConvertable/IParsable.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{1391808F-1F1D-4F8F-9EAF-C4030E040B3A}</ProjectGuid>
+    <ProjectGuid>{F09CC224-98E0-4B2F-AF38-03E15F266F80}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>BEDParser</RootNamespace>
-    <AssemblyName>BEDParser</AssemblyName>
+    <RootNamespace>IConvertable</RootNamespace>
+    <AssemblyName>IConvertable</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -43,25 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BEDParser.cs" />
-    <Compile Include="ChrStatistics.cs" />
-    <Compile Include="ParsedBED.cs" />
+    <Compile Include="IParsable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ValueEventArgs.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\IConvertable\IParsable.csproj">
-      <Project>{f09cc224-98e0-4b2f-af38-03e15f266f80}</Project>
-      <Name>IParsable</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\IInterval\IInterval.csproj">
-      <Project>{a22001fa-a30d-4027-832c-9ebcfd6aa8c7}</Project>
-      <Name>IInterval</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\IMetadata\ICPMetadata.csproj">
-      <Project>{0a7bc7e5-d0a2-49fd-9574-0aa84900e948}</Project>
-      <Name>ICPMetadata</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
