--- a/Di3/Di3Interfaces/Di3Interfaces.csproj
+++ b/Di3/Di3Interfaces/Di3Interfaces.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8E9D275F-0148-40CE-8F23-94CD0B32BBC5}</ProjectGuid>
+    <ProjectGuid>{1159F7F9-561B-4D81-9708-62A26E80554E}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Di3Bioinformatics</RootNamespace>
-    <AssemblyName>Di3Bioinformatics</AssemblyName>
+    <RootNamespace>Di3Interfaces</RootNamespace>
+    <AssemblyName>Di3Interfaces</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
@@ -43,28 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="FunctionsOutput\AggregateFactory.cs" />
-    <Compile Include="FunctionsOutput\CSOutputCount.cs" />
-    <Compile Include="Di3B.cs" />
-    <Compile Include="BaseGenome.cs" />
-    <Compile Include="FunctionsOutput\FunctionOutput.cs" />
-    <Compile Include="FunctionsOutput\Output.cs" />
-    <Compile Include="Genome.cs" />
+    <Compile Include="ICoordinate.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\IInterval\IInterval.csproj">
-      <Project>{a22001fa-a30d-4027-832c-9ebcfd6aa8c7}</Project>
-      <Name>IInterval</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\IMetadata\ICPMetadata.csproj">
-      <Project>{0a7bc7e5-d0a2-49fd-9574-0aa84900e948}</Project>
-      <Name>ICPMetadata</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Library\Di3\Di3.csproj">
-      <Project>{7cafe7be-5ef5-4b25-9c01-cdf793626f11}</Project>
-      <Name>Di3</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
