--- a/Di3/Di3Main/Di3BMain.csproj
+++ b/Di3/Di3Main/Di3BMain.csproj
@@ -41,6 +41,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -82,7 +83,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CoordinateClass.cs" />
     <Compile Include="Herald.cs" />
     <Compile Include="Orchestrator.cs" />
     <Compile Include="DATA.cs" />
@@ -107,10 +107,6 @@
     <ProjectReference Include="..\Di3Bioinformatics\Di3Bioinformatics.csproj">
       <Project>{8e9d275f-0148-40ce-8f23-94cd0b32bbc5}</Project>
       <Name>Di3Bioinformatics</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Di3Interfaces\Di3Interfaces.csproj">
-      <Project>{1159f7f9-561b-4d81-9708-62a26e80554e}</Project>
-      <Name>Di3Interfaces</Name>
     </ProjectReference>
     <ProjectReference Include="..\IInterval\IInterval.csproj">
       <Project>{a22001fa-a30d-4027-832c-9ebcfd6aa8c7}</Project>
