A fully revised and refined version.
Changes:
- Almost all the code is re-written.
- Projects are re-organized. 
- All known bugs are resolved. 

Todo: 
- Define Di3 to re-use serialized data.
- Update and debug Cover/Summit/Map functions.

--- a/Di3/TestMain/TestMain.csproj
+++ b/Di3/TestMain/TestMain.csproj
@@ -36,8 +36,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CSharpTest.Net.Collections">
-      <HintPath>..\packages\CSharpTest.Net.Collections.14.906.1403.1082\lib\net40\CSharpTest.Net.Collections.dll</HintPath>
+    <Reference Include="CSharpTest.Net.BPlusTree">
+      <HintPath>..\packages\CSharpTest.Net.BPlusTree.2.14.126.467\lib\net45\CSharpTest.Net.BPlusTree.dll</HintPath>
+    </Reference>
+    <Reference Include="CSharpTest.Net.Library">
+      <HintPath>..\packages\CSharpTest.Net.Library.2.14.126.467\lib\net45\CSharpTest.Net.Library.dll</HintPath>
     </Reference>
     <Reference Include="protobuf-net">
       <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
