--- a/Di3/DirectDi3TEST/DirectDi3TEST.csproj
+++ b/Di3/DirectDi3TEST/DirectDi3TEST.csproj
@@ -36,10 +36,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="CSharpTest.Net.Collections, Version=14.906.1403.1082, Culture=neutral, PublicKeyToken=06aee00cce822474, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\CSharpTest.Net.Collections.14.906.1403.1082\lib\net40\CSharpTest.Net.Collections.dll</HintPath>
-    </Reference>
     <Reference Include="protobuf-net">
       <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
@@ -62,6 +58,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Di3Clone\Di3.csproj">
+      <Project>{5a568492-f768-49f2-a3d9-956dd80e6e67}</Project>
+      <Name>Di3</Name>
+    </ProjectReference>
     <ProjectReference Include="..\IInterval\IInterval.csproj">
       <Project>{a22001fa-a30d-4027-832c-9ebcfd6aa8c7}</Project>
       <Name>IInterval</Name>
@@ -69,10 +69,6 @@
     <ProjectReference Include="..\IMetadata\ICPMetadata.csproj">
       <Project>{0a7bc7e5-d0a2-49fd-9574-0aa84900e948}</Project>
       <Name>ICPMetadata</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Library\Di3\Di3.csproj">
-      <Project>{7cafe7be-5ef5-4b25-9c01-cdf793626f11}</Project>
-      <Name>Di3</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
