--- a/Di3/TestMain/packages.config
+++ b/Di3/TestMain/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CSharpTest.Net.Collections" version="14.906.1403.1082" targetFramework="net45" />
+  <package id="CSharpTest.Net.BPlusTree" version="2.14.126.467" targetFramework="net45" />
+  <package id="CSharpTest.Net.Library" version="2.14.126.467" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
 </packages>
