- few bugs resolved. - di3 disk occupancy and cache are optimized.

--- a/Di3/Di3BClone/Di3B.csproj
+++ b/Di3/Di3BClone/Di3B.csproj
@@ -53,6 +53,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Di3B.cs" />
+    <Compile Include="Enums.cs" />
     <Compile Include="FunctionsOutput\AggregateFactory.cs" />
     <Compile Include="FunctionsOutput\CSOutputCount.cs" />
     <Compile Include="FunctionsOutput\FunctionOutput.cs" />
