some bugs with Di3B and Di3BMain are resolved. A test project is also added to check the writing speed.

--- a/Di3/Di3BMainClone/App.config
+++ b/Di3/Di3BMainClone/App.config
@@ -1,5 +1,38 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <section name="Chromosome" type="Di3B.ChrSection, Di3B, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null" />
+    </configSections>
+    <Chromosome>
+        <GenomeEndpoints>
+            <remove />
+            <add Chr="chr1" Strand="*" Index="E:\Di3Encode\Di3chr1.indx" />
+            <add Chr="chr2" Strand="*" Index="E:\Di3Encode\Di3chr2.indx" />
+			<add Chr="chr3" Strand="*" Index="E:\Di3Encode\Di3chr3.indx" />
+			<add Chr="chr4" Strand="*" Index="E:\Di3Encode\Di3chr4.indx" />
+			<add Chr="chr5" Strand="*" Index="E:\Di3Encode\Di3chr5.indx" />
+			<add Chr="chr6" Strand="*" Index="E:\Di3Encode\Di3chr6.indx" />
+			<add Chr="chr7" Strand="*" Index="E:\Di3Encode\Di3chr7.indx" />
+			<add Chr="chr8" Strand="*" Index="E:\Di3Encode\Di3chr8.indx" />
+			<add Chr="chr9" Strand="*" Index="E:\Di3Encode\Di3chr9.indx" />
+			<add Chr="chr10" Strand="*" Index="E:\Di3Encode\Di3chr10.indx" />
+			<add Chr="chr11" Strand="*" Index="E:\Di3Encode\Di3chr11.indx" />
+			<add Chr="chr12" Strand="*" Index="E:\Di3Encode\Di3chr12.indx" />
+			<add Chr="chr13" Strand="*" Index="E:\Di3Encode\Di3chr13.indx" />
+			<add Chr="chr14" Strand="*" Index="E:\Di3Encode\Di3chr14.indx" />
+			<add Chr="chr15" Strand="*" Index="E:\Di3Encode\Di3chr15.indx" />
+			<add Chr="chr16" Strand="*" Index="E:\Di3Encode\Di3chr16.indx" />
+			<add Chr="chr17" Strand="*" Index="E:\Di3Encode\Di3chr17.indx" />
+			<add Chr="chr18" Strand="*" Index="E:\Di3Encode\Di3chr18.indx" />
+			<add Chr="chr19" Strand="*" Index="E:\Di3Encode\Di3chr19.indx" />
+			<add Chr="chr20" Strand="*" Index="E:\Di3Encode\Di3chr20.indx" />
+			<add Chr="chr21" Strand="*" Index="E:\Di3Encode\Di3chr21.indx" />
+        </GenomeEndpoints>
+    </Chromosome>
+    <appSettings>
+        <add key="WorkingDirectory" value="I:\Di3Data" />
+        <add key="LogFile" value="E:\Di3Encode\Di3.log" />
+    </appSettings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
