--- a/Di3/packages/repositories.config
+++ b/Di3/packages/repositories.config
@@ -6,6 +6,7 @@
   <repository path="..\Di3Clone\packages.config" />
   <repository path="..\Di3Main\packages.config" />
   <repository path="..\DirectDi3TEST\packages.config" />
+  <repository path="..\IndexSpeedTest\packages.config" />
   <repository path="..\Library\Di3\packages.config" />
   <repository path="..\TestMain\packages.config" />
 </repositories>
