--- a/Di3/Di3BMainClone/Di3BMain.csproj
+++ b/Di3/Di3BMainClone/Di3BMain.csproj
@@ -46,6 +46,7 @@
       <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -67,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="Di3BMain.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
