1- Different constructors added to Di3 2- Speed Test package updated.

--- a/Di3/IndexSpeedTest/IndexSpeedTest.csproj
+++ b/Di3/IndexSpeedTest/IndexSpeedTest.csproj
@@ -54,10 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IndexSpeed_01.cs" />
-    <Compile Include="IndexSpeed_02.cs" />
-    <Compile Include="IndexSpeed_03.cs" />
-    <Compile Include="IndexSpeed_04.cs" />
+    <Compile Include="IndexSpeedTest.cs" />
     <Compile Include="Int32Comparer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
