--- a/Di3/Di3BMainClone/Di3BMain.csproj
+++ b/Di3/Di3BMainClone/Di3BMain.csproj
@@ -58,6 +58,8 @@
     <Compile Include="Comparers\Int32Comparer.cs" />
     <Compile Include="Logging\Herald.cs" />
     <Compile Include="Orchestrator.cs" />
+    <Compile Include="PrimaryComponents\LightPeak.cs" />
+    <Compile Include="PrimaryComponents\LightPeakData.cs" />
     <Compile Include="PrimaryComponents\Peak.cs" />
     <Compile Include="PrimaryComponents\PeakData.cs" />
     <Compile Include="PrimaryComponents\Repository.cs" />
