This is to check in all pending changes before RENAMING to avoid CLONEs and removed DUPLICATES.

--- a/Di3/packages/repositories.config
+++ b/Di3/packages/repositories.config
@@ -8,5 +8,6 @@
   <repository path="..\DirectDi3TEST\packages.config" />
   <repository path="..\IndexSpeedTest\packages.config" />
   <repository path="..\Library\Di3\packages.config" />
+  <repository path="..\MapSpeedTest\packages.config" />
   <repository path="..\TestMain\packages.config" />
 </repositories>
