--- a/Di3/MapSpeedTest/MapSpeedTest.csproj
+++ b/Di3/MapSpeedTest/MapSpeedTest.csproj
@@ -1,28 +1,27 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{842D8921-636D-4DF5-A946-4092EEFAF44E}</ProjectGuid>
+    <ProjectGuid>{08E4A3EB-9D4F-4E51-8BB9-BDCA84064A20}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>IndexSpeedTest</RootNamespace>
-    <AssemblyName>IndexSpeedTest</AssemblyName>
+    <RootNamespace>MapSpeedTest</RootNamespace>
+    <AssemblyName>MapSpeedTest</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SccProjectName>SAK</SccProjectName>
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
-    <BaseDirectory>..\..\..\..\..\..\Di3_4_64_2_256_noBlockSize_noAvg</BaseDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\..\Di3_4_64_2_256_noBlockSize_noAvg</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -31,7 +30,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\..\..\..\..\Di3_2ndUpdate</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -42,6 +41,9 @@
     </Reference>
     <Reference Include="CSharpTest.Net.Library">
       <HintPath>..\packages\CSharpTest.Net.Library.2.14.126.467\lib\net45\CSharpTest.Net.Library.dll</HintPath>
+    </Reference>
+    <Reference Include="Interfaces">
+      <HintPath>..\Di3Clone\bin\Debug\Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="protobuf-net">
       <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
@@ -55,8 +57,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IndexSpeedTest.cs" />
     <Compile Include="Int32Comparer.cs" />
+    <Compile Include="MapSpeedTest.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -65,17 +67,17 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Di3BClone\Di3B.csproj">
+      <Project>{c5ba307c-57f1-4744-80b7-25510b75cad3}</Project>
+      <Name>Di3B</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Di3BMainClone\Di3BMain.csproj">
-      <Project>{A9D02F27-2232-4346-A9CC-84A02CEFC03B}</Project>
+      <Project>{a9d02f27-2232-4346-a9cc-84a02cefc03b}</Project>
       <Name>Di3BMain</Name>
     </ProjectReference>
     <ProjectReference Include="..\Di3Clone\Di3.csproj">
-      <Project>{5A568492-F768-49F2-A3D9-956DD80E6E67}</Project>
+      <Project>{5a568492-f768-49f2-a3d9-956dd80e6e67}</Project>
       <Name>Di3</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
-      <Project>{182F5584-F44D-4656-B359-0FE2AE1249AB}</Project>
-      <Name>Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
