some clean ups + introducing options for Di3

--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Enums.cs" />
     <Compile Include="Interfaces\ICSOutput.cs" />
     <Compile Include="PrimaryComponents\B.cs" />
+    <Compile Include="PrimaryComponents\Di3Options.cs" />
     <Compile Include="PrimaryComponents\Lambda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializers\BSerializer.cs" />
