--- a/Di3/packages/repositories.config
+++ b/Di3/packages/repositories.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Di3\packages.config" />
   <repository path="..\Di3BClone\packages.config" />
   <repository path="..\Di3Bioinformatics\packages.config" />
+  <repository path="..\Di3BMain\packages.config" />
   <repository path="..\Di3BMainClone\packages.config" />
   <repository path="..\Di3Clone\packages.config" />
   <repository path="..\Di3Main\packages.config" />
