--- a/Di3/IndexSpeedTest/IndexSpeedTest.csproj
+++ b/Di3/IndexSpeedTest/IndexSpeedTest.csproj
@@ -15,14 +15,13 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
-    <BaseDirectory>..\..\..\..\..\..\Di3_4_64_2_256_noBlockSize_noAvg</BaseDirectory>
+    <BaseDirectory>..\..\..\..\..\..\sp\ffff</BaseDirectory>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\..\..\..\..\Di3Multipass\</OutputPath>
+    <OutputPath>..\..\..\..\..\..\sp</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
