--- a/Di3/MapSpeedTest/MapSpeedTest.csproj
+++ b/Di3/MapSpeedTest/MapSpeedTest.csproj
@@ -42,9 +42,6 @@
     <Reference Include="CSharpTest.Net.Library">
       <HintPath>..\packages\CSharpTest.Net.Library.2.14.126.467\lib\net45\CSharpTest.Net.Library.dll</HintPath>
     </Reference>
-    <Reference Include="Interfaces">
-      <HintPath>..\Di3Clone\bin\Debug\Interfaces.dll</HintPath>
-    </Reference>
     <Reference Include="protobuf-net">
       <HintPath>..\packages\protobuf-net.2.0.0.668\lib\net40\protobuf-net.dll</HintPath>
     </Reference>
@@ -78,6 +75,10 @@
     <ProjectReference Include="..\Di3\Di3.csproj">
       <Project>{5a568492-f768-49f2-a3d9-956dd80e6e67}</Project>
       <Name>Di3</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Interfaces\Interfaces.csproj">
+      <Project>{182f5584-f44d-4656-b359-0fe2ae1249ab}</Project>
+      <Name>Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
