--- a/Di3/packages/repositories.config
+++ b/Di3/packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Di3\packages.config" />
+  <repository path="..\Di3B\packages.config" />
 </repositories>
