--- a/Di3/packages/repositories.config
+++ b/Di3/packages/repositories.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\BPlusTreeTest\packages.config" />
   <repository path="..\Di3\packages.config" />
   <repository path="..\Di3B\packages.config" />
+  <repository path="..\Di3BMain\packages.config" />
+  <repository path="..\IndexSpeedTest\packages.config" />
+  <repository path="..\MapSpeedTest\packages.config" />
 </repositories>
