--- a/Di3/IndexSpeedTest/IndexSpeedTest.csproj
+++ b/Di3/IndexSpeedTest/IndexSpeedTest.csproj
@@ -54,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ControledIntervals.cs" />
     <Compile Include="IndexSpeedTest_v1.cs" />
     <Compile Include="IndexSpeedTest_v2.cs" />
     <Compile Include="Int32Comparer.cs" />
