Tests updated. A small project is added to test a built-in serializer.

--- a/Di3/packages/repositories.config
+++ b/Di3/packages/repositories.config
@@ -4,6 +4,7 @@
   <repository path="..\Di3\packages.config" />
   <repository path="..\Di3B\packages.config" />
   <repository path="..\Di3BMain\packages.config" />
+  <repository path="..\Di3WithCustomBlockSerializer\packages.config" />
   <repository path="..\IndexSpeedTest\packages.config" />
   <repository path="..\MapSpeedTest\packages.config" />
 </repositories>
