--- a/Di3/Di3WithCustomBlockSerializer/Di3WithCustomBlockSerializer.csproj
+++ b/Di3/Di3WithCustomBlockSerializer/Di3WithCustomBlockSerializer.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="B.cs" />
+    <Compile Include="INDEX.cs" />
     <Compile Include="Lambda.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
