1. Di3BMain is changed to Di3BCLI. 2. Di3BCLI is updated for working directory and Di3 Log file. 3. Herald is updated. 4. Orchastrator is updated. 5. Enums are used for Aggregate and Cover variations. 6. Index Test functions are updated.

--- a/Di3/packages/repositories.config
+++ b/Di3/packages/repositories.config
@@ -3,6 +3,7 @@
   <repository path="..\BPlusTreeTest\packages.config" />
   <repository path="..\Di3\packages.config" />
   <repository path="..\Di3B\packages.config" />
+  <repository path="..\Di3BCLI\packages.config" />
   <repository path="..\Di3BMain\packages.config" />
   <repository path="..\Di3WithCustomBlockSerializer\packages.config" />
   <repository path="..\IndexSpeedTest\packages.config" />
