--- a/Di3/Di3WithCustomBlockSerializer/Di3WithCustomBlockSerializer.csproj
+++ b/Di3/Di3WithCustomBlockSerializer/Di3WithCustomBlockSerializer.csproj
@@ -15,6 +15,8 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -63,10 +65,6 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Di3BMain\Di3BMain.csproj">
-      <Project>{f8235645-248f-46de-956e-5d3367ee19a0}</Project>
-      <Name>Di3BMain</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Di3B\Di3B.csproj">
       <Project>{d17dd4b8-ea5a-4a0c-a029-7b353b092aa1}</Project>
       <Name>Di3B</Name>
@@ -77,6 +75,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
