--- a/Di3/IndexSpeedTest/IndexSpeedTest.csproj
+++ b/Di3/IndexSpeedTest/IndexSpeedTest.csproj
@@ -15,6 +15,8 @@
     <SccLocalPath>SAK</SccLocalPath>
     <SccAuxPath>SAK</SccAuxPath>
     <SccProvider>SAK</SccProvider>
+    <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
+    <RestorePackages>true</RestorePackages>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -60,7 +62,6 @@
     <Compile Include="Int32Comparer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests_v2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -71,9 +72,9 @@
       <Project>{a8579878-71fa-44b1-9fcf-62c88cbe5248}</Project>
       <Name>BEDParser</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Di3BMain\Di3BMain.csproj">
-      <Project>{f8235645-248f-46de-956e-5d3367ee19a0}</Project>
-      <Name>Di3BMain</Name>
+    <ProjectReference Include="..\Di3BCLI\Di3BCLI.csproj">
+      <Project>{ed22831f-4e4d-4c49-b02b-a8cb21dccf35}</Project>
+      <Name>Di3BCLI</Name>
     </ProjectReference>
     <ProjectReference Include="..\Di3\Di3.csproj">
       <Project>{a18501a2-6959-40b2-9d17-9bb563c51bdc}</Project>
@@ -85,6 +86,7 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
