1. Di3CLI updated. 2. Di3B is updated. 3. Di3 is updated. 4. Test Functions are updated. 5. New test for Di3 bulk insert is added.

--- a/Di3/BPlusTreeTest/BPlusTreeTest.csproj
+++ b/Di3/BPlusTreeTest/BPlusTreeTest.csproj
@@ -53,9 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BulkInsertTest.cs" />
     <Compile Include="LargeInsertion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangeInsertTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
