--- a/Di3/Di3/Di3.csproj
+++ b/Di3/Di3/Di3.csproj
@@ -54,13 +54,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuxiliaryComponents\PartitionStruct.cs" />
+    <Compile Include="BasicOperations\BulkIndex.cs" />
     <Compile Include="BasicOperations\HigherOrderFuncs.cs" />
-    <Compile Include="BasicOperations\INDEX.cs" />
+    <Compile Include="BasicOperations\SingleIndex.cs" />
+    <Compile Include="BasicOperations\RangeIndex.cs" />
     <Compile Include="Di3.cs" />
     <Compile Include="Interfaces\ICSOutput.cs" />
     <Compile Include="PrimaryComponents\B.cs" />
     <Compile Include="PrimaryComponents\Di3Options.cs" />
-    <Compile Include="PrimaryComponents\Enums.cs" />
+    <Compile Include="AuxiliaryComponents\Enums.cs" />
     <Compile Include="PrimaryComponents\Lambda.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serializers\BlockSerializer.cs" />
